--- a/My Project:KNN /New/New/Main-Project.csproj
+++ b/My Project:KNN /New/New/Main-Project.csproj
@@ -9,5 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="NeoCortexApi" Version="1.1.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
